--- a/Soundata_colab_example.ipynb
+++ b/Soundata_colab_example.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyOVn//4jcJu5IOkgLLhOs38",
       "include_colab_link": true
     },
